--- a/index.html
+++ b/index.html
@@ -776,23 +776,75 @@
     <section id="experience">
         <div class="container">
             <h2>Education & Experience</h2>
-            <div class="timeline">
-                <div class="timeline-item">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <h4>Post Graduate Program in AI and Machine Learning</h4>
-                        <h5>UT McCombs School of Business</h5>
-                        <span class="timeline-date">2025</span>
-                        <p>Relevant coursework: Deep Learning, NLP, Computer Vision, and Generative AI</p>
+            
+            <!-- Education Timeline -->
+            <div style="margin-bottom: 3rem;">
+                <h3 style="font-size: 1.5rem; margin-bottom: 2rem; color: var(--primary);">
+                    <i class="fas fa-graduation-cap" style="margin-right: 0.5rem;"></i> Education
+                </h3>
+                <div class="timeline">
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-content">
+                            <h4>Masters in AI and Machine Learning</h4>
+                            <h5>Drexel University</h5>
+                            <span class="timeline-date">2020 - 2024</span>
+                            <p>Participated in the Computational Concentration, a theoretical/technical path designed for students interested in developing their own AI/ML algorithms or augmenting existing ones.</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-content">
+                            <h4>Post Graduate Program in AI and Machine Learning</h4>
+                            <h5>UT McCombs School of Business</h5>
+                            <span class="timeline-date">2025</span>
+                            <p>Relevant coursework: Deep Learning, NLP, Computer Vision, and Generative AI</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-content">
+                            <h4>Bachelor of Science in Computer Science</h4>
+                            <h5>Texas A&M University</h5>
+                            <span class="timeline-date">2020 - 2024</span>
+                            <p>Relevant coursework: Data Science, Machine Learning, Artificial Intelligence, Analysis of Algorithms, Abstract Algebra I-II, Theory of Computation</p>
+                        </div>
                     </div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <h4>Bachelor of Science in Computer Science</h4>
-                        <h5>Texas A&M University</h5>
-                        <span class="timeline-date">2020 - 2024</span>
-                        <p>Relevant coursework: Data Science, Machine Learning, Artificial Intelligence, Analysis of Algorithms, Abstract Algebra I-II, Theory of Computation</p>
+            </div>
+
+            <!-- Work Experience Timeline -->
+            <div>
+                <h3 style="font-size: 1.5rem; margin-bottom: 2rem; color: var(--primary);">
+                    <i class="fas fa-briefcase" style="margin-right: 0.5rem;"></i> Work Experience
+                </h3>
+                <div class="timeline">
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-content">
+                            <h4>Lead Instructor</h4>
+                            <h5>Mathnasium</h5>
+                            <span class="timeline-date">April 2025 - Present</span>
+                            <p>Supervised and mentored junior instructors, providing training on teaching techniques, student assessment protocols, and center operations to maintain consistent educational quality. Managed daily center operations including student check-ins, progress tracking, and parent communication to ensure smooth facility operations and positive learning environment.</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-content">
+                            <h4>Capstone Project</h4>
+                            <h5>Ipelint</h5>
+                            <span class="timeline-date">August 2024 - December 2024</span>
+                            <p>Developed a Multi-Model AI Solution integrating CPC classification, keyword extraction, and prior art search, cutting manual patent analysis time.</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-content">
+                            <h4>Mathematics Teaching Assistant</h4>
+                            <h5>Texas A&M University</h5>
+                            <span class="timeline-date">August 2023 - June 2024</span>
+                            <p>Evaluated and provided detailed feedback on homework assignments for 120+ students across 3 sections of Linear Algebra.</p>
+                        </div>
                     </div>
                 </div>
             </div>
