--- a/index.html
+++ b/index.html
@@ -864,12 +864,44 @@
                 <!-- BirdCLEF Project -->
                 <div class="project-card deep-learning">
                     <div class="project-image">
+                        <img src="assets/dataset-card.png" alt="Emotion Detection">
+                        <span class="project-badge">Deep Learning</span>
+                    </div>
+                    <div class="project-content">
+                        <h3>Real-time Emotion Detection with Attention Visualizationx</h3>
+                        <p>[In-Progress] Developed a deep learning system to detect 7 facial emotions in real-time using CNN with attention mechanisms. Features live webcam integration and Grad-CAM visualization to highlight facial regions driving predictions.</p>
+                        <div class="tech-stack">
+                            <span>Python</span>
+                            <span>PyTorch</span>
+                            <span>OpenCV</span>
+                            <span>Grad-CM</span>
+                        </div>
+                        <div class="project-metrics">
+                            <div class="metric">
+                                <span class="metric-value">--</span>
+                                <span class="metric-label">Accuracy</span>
+                            </div>
+                            <div class="metric">
+                                <span class="metric-value">--</span>
+                                <span class="metric-label">FPS</span>
+                            </div>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://www.kaggle.com/datasets/msambare/fer2013" target="_blank" class="btn btn-primary">View Dataset</a>
+                            <a href="https://github.com/preston-g-bied/emotion_detection_project" target="_blank" class="btn btn-secondary">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- BirdCLEF Project -->
+                <div class="project-card deep-learning">
+                    <div class="project-image">
                         <img src="assets/bird.jpeg" alt="BirdCLEF Project">
                         <span class="project-badge">Deep Learning</span>
                     </div>
                     <div class="project-content">
                         <h3>BirdCLEF+ 2025: Multi-Species Acoustic Monitoring</h3>
-                        <p>[In Progress] Developed a machine learning system to identify birds, amphibians, mammals, and insects from acoustic recordings in Colombia's El Silencio Natural Reserve.</p>
+                        <p>[Unfinished] Developed a machine learning system to identify birds, amphibians, mammals, and insects from acoustic recordings in Colombia's El Silencio Natural Reserve.</p>
                         <div class="tech-stack">
                             <span>Python</span>
                             <span>PyTorch</span>
@@ -926,6 +958,7 @@
                 </div>
 
                 <!-- Sentiment Analysis -->
+                <!--
                 <div class="project-card nlp">
                     <div class="project-image">
                         <img src="assets/reddit.webp" alt="Reddit Sentiment Analysis">
@@ -956,8 +989,10 @@
                         </div>
                     </div>
                 </div>
+                -->
 
                 <!-- Customer Segmentation -->
+                <!--
                 <div class="project-card clustering">
                     <div class="project-image">
                         <img src="assets/customer-segmentation.webp" alt="Customer Segmentation">
@@ -988,6 +1023,7 @@
                         </div>
                     </div>
                 </div>
+                -->
             </div>
         </div>
     </section>
