small skills changes

--- a/index.html
+++ b/index.html
@@ -1422,7 +1422,7 @@
 
             <div class="specialization-card">
                 <div class="specialization-icon">
-                    <i class="fas fa-waveform"></i>
+                    <i class="fas fa-wave-square"></i>
                 </div>
                 <h3>Audio Processing</h3>
                 <p>Acoustic monitoring, species identification, audio augmentation, and spectrogram analysis</p>
@@ -1509,6 +1509,7 @@
                         <span class="skill-tag proficient">Matplotlib</span>
                         <span class="skill-tag proficient">Seaborn</span>
                         <span class="skill-tag">Plotly</span>
+                        <span class="skill-tag">Tableau</span>
                     </div>
                 </div>
             </div>
