added SBP project

--- a/index.html
+++ b/index.html
@@ -1294,6 +1294,7 @@
                 <button class="filter-btn" data-filter="clustering">Clustering</button>
                 <button class="filter-btn" data-filter="nlp">NLP</button>
                 <button class="filter-btn" data-filter="deep-learning">Deep Learning</button>
+                <button class="filter-btn" data-filter="artificial-intelligence">Artificial Intelligence</button>
             </div>
             
             <div class="projects-grid">
@@ -1325,6 +1326,37 @@
                         <div class="project-links">
                             <a href="https://www.kaggle.com/datasets/msambare/fer2013" target="_blank" class="btn btn-primary">View Dataset</a>
                             <a href="https://github.com/preston-g-bied/emotion_detection_project" target="_blank" class="btn btn-secondary">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- SBP Search -->
+                <div class="project-card artificial-intelligence">
+                    <div class="project-image">
+                        <img src="assets/sbp.jpg" alt="Sliding Brick Puzzle">
+                        <span class="project-badge">Artificial Intelligence</span>
+                    </div>
+                    <div class="project-content">
+                        <h3>Sliding Brick Puzzle Solver</h3>
+                        <p>Implemented multiple AI search algorithms (BFS, DFS, IDS, A*) to solve sliding block puzzles. Features state normalization, move generation, and heuristic-based optimization for efficient pathfinding.</p>
+                        <div class="tech-stack">
+                            <span>Python</span>
+                            <span>A* Search</span>
+                            <span>Graph Algorithms</span>
+                            <span>CLI Tool</span>
+                        </div>
+                        <div class="project-metrics">
+                            <div class="metric">
+                                <span class="metric-value">Yes</span>
+                                <span class="metric-label">Complete?</span>
+                            </div>
+                            <div class="metric">
+                                <span class="metric-value">Yes</span>
+                                <span class="metric-label">Optimal?</span>
+                            </div>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/preston-g-bied/sliding-brick-puzzle" target="_blank" class="btn btn-secondary">GitHub</a>
                         </div>
                     </div>
                 </div>
