SBP puzzle button color

--- a/index.html
+++ b/index.html
@@ -1356,7 +1356,7 @@
                             </div>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/preston-g-bied/sliding-brick-puzzle" target="_blank" class="btn btn-secondary">GitHub</a>
+                            <a href="https://github.com/preston-g-bied/sliding-brick-puzzle" target="_blank" class="btn btn-primary">GitHub</a>
                         </div>
                     </div>
                 </div>
