added object detection project

--- a/index.html
+++ b/index.html
@@ -1290,11 +1290,10 @@
             <h2>Featured Projects</h2>
             <div class="project-filters">
                 <button class="filter-btn active" data-filter="all">All Projects</button>
-                <button class="filter-btn" data-filter="regression">Regression</button>
-                <button class="filter-btn" data-filter="clustering">Clustering</button>
-                <button class="filter-btn" data-filter="nlp">NLP</button>
                 <button class="filter-btn" data-filter="deep-learning">Deep Learning</button>
+                 <button class="filter-btn" data-filter="cloud">Cloud Computing</button>
                 <button class="filter-btn" data-filter="artificial-intelligence">Artificial Intelligence</button>
+                <button class="filter-btn" data-filter="regression">Regression</button>
             </div>
             
             <div class="projects-grid">
@@ -1357,6 +1356,38 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/preston-g-bied/sliding-brick-puzzle" target="_blank" class="btn btn-primary">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Object Detection -->
+                <div class="project-card cloud">
+                    <div class="project-image">
+                        <img src="assets/object_detection.jpg" alt="Object Detection">
+                        <span class="project-badge">Cloud & Data Pipeline</span>
+                    </div>
+                    <div class="project-content">
+                        <h3>AWS Image Recognition & Classification Pipeline</h3>
+                        <p>[In-Progress] Built an end-to-end cloud data pipeline using AWS services to automatically classify and store image analysis results. Upload images to S3, process with Rekognition AI, and query results using SQL - demonstrating cloud architecture and database design skills.</p>
+                        <div class="tech-stack">
+                            <span>AWS S3</span>
+                            <span>AWS Rekognition</span>
+                            <span>AWS RDS</span>
+                            <span>MySQL</span>
+                            <span>boto3</span>
+                        </div>
+                        <div class="project-metrics">
+                            <div class="metric">
+                                <span class="metric-value">--</span>
+                                <span class="metric-label">Condifence</span>
+                            </div>
+                            <div class="metric">
+                                <span class="metric-value">--</span>
+                                <span class="metric-label">Images Processed</span>
+                            </div>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/preston-g-bied/-image-recognition-project" target="_blank" class="btn btn-primary">GitHub</a>
                         </div>
                     </div>
                 </div>
