added MDB internship

--- a/index.html
+++ b/index.html
@@ -1279,6 +1279,15 @@
                             <p>Evaluated and provided detailed feedback on homework assignments for 120+ students across 3 sections of Linear Algebra.</p>
                         </div>
                     </div>
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-content">
+                            <h4>IP Analyst Intern</h4>
+                            <h5>MDB Capital Group</h5>
+                            <span class="timeline-date">June 2023 - June 2024</span>
+                            <p>Composed IP Landscape & Prosecution History Reports using PatentVest, enabling informed investment decisions on early-stage technology companies.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
