drexel date and ficciones

--- a/index.html
+++ b/index.html
@@ -1221,7 +1221,7 @@
                         <div class="timeline-content">
                             <h4>Masters in AI and Machine Learning</h4>
                             <h5>Drexel University</h5>
-                            <span class="timeline-date">2020 - 2024</span>
+                            <span class="timeline-date">2025 - 2026</span>
                             <p>Participated in the Computational Concentration, a theoretical/technical path designed for students interested in developing their own AI/ML algorithms or augmenting existing ones.</p>
                         </div>
                     </div>
@@ -1711,6 +1711,14 @@
                     </div>
 
                     <!-- To add more currently reading books, copy one of the blocks above -->
+                    <div class="current-book">
+                        <div class="current-book-cover">
+                            <img src="assets/covers/ficciones.jpg" alt="Ficciones" style="width: 100%; height: 100%; object-fit: cover;">
+                            <i class="fas fa-book" style="font-size: 3rem; opacity: 0.3;"></i>
+                        </div>
+                        <h4>Ficciones</h4>
+                        <p>Jorge Luis Borges</p>
+                    </div>
                     
                 </div>
             </div>
