MDB date fix, savage detectives, emotion detection project finished

--- a/index.html
+++ b/index.html
@@ -1284,7 +1284,7 @@
                         <div class="timeline-content">
                             <h4>IP Analyst Intern</h4>
                             <h5>MDB Capital Group</h5>
-                            <span class="timeline-date">June 2023 - June 2024</span>
+                            <span class="timeline-date">June 2021 - June 2023</span>
                             <p>Composed IP Landscape & Prosecution History Reports using PatentVest, enabling informed investment decisions on early-stage technology companies.</p>
                         </div>
                     </div>
@@ -1314,7 +1314,7 @@
                     </div>
                     <div class="project-content">
                         <h3>Real-time Emotion Detection with Attention Visualization</h3>
-                        <p>[In-Progress] Developed a deep learning system to detect 7 facial emotions in real-time using CNN with attention mechanisms. Features live webcam integration and Grad-CAM visualization to highlight facial regions driving predictions.</p>
+                        <p>Developed a deep learning system to detect 7 facial emotions in real-time using CNN with attention mechanisms. Features live webcam integration and Grad-CAM visualization to highlight facial regions driving predictions.</p>
                         <div class="tech-stack">
                             <span>Python</span>
                             <span>PyTorch</span>
@@ -1703,11 +1703,11 @@
                     <!-- BOOK 1 - To add a cover image, replace the src with your image URL or path -->
                     <div class="current-book">
                         <div class="current-book-cover">
-                            <img src="assets/covers/don_quixote.jpg" alt="Don Quixote" style="width: 100%; height: 100%; object-fit: cover;">
+                            <img src="assets/covers/savage_detectives.jpg" alt="The Savage Detectives" style="width: 100%; height: 100%; object-fit: cover;">
                             <i class="fas fa-book" style="font-size: 3rem; opacity: 0.3;"></i>
                         </div>
-                        <h4>Don Quixote</h4>
-                        <p>Miguel De Cervantes</p>
+                        <h4>The Savage Detectives</h4>
+                        <p>Roberto Bolaño</p>
                     </div>
 
                     <!-- To add more currently reading books, copy one of the blocks above -->
