emotion detection metrics

--- a/index.html
+++ b/index.html
@@ -1323,11 +1323,11 @@
                         </div>
                         <div class="project-metrics">
                             <div class="metric">
-                                <span class="metric-value">--</span>
+                                <span class="metric-value">65.9%</span>
                                 <span class="metric-label">Accuracy</span>
                             </div>
                             <div class="metric">
-                                <span class="metric-value">--</span>
+                                <span class="metric-value">50+</span>
                                 <span class="metric-label">FPS</span>
                             </div>
                         </div>
