2666 and resume update

--- a/index.html
+++ b/index.html
@@ -1680,7 +1680,7 @@
                     </a>
                 </div>
                 <div style="margin-top: 2rem;">
-                    <a href="assets/preston-bied-resume-oct-2025.pdf" download class="btn btn-primary">
+                    <a href="assets/preston-bied-resume-nov-2025.pdf" download class="btn btn-primary">
                         <i class="fas fa-download"></i> Download Resume
                     </a>
                 </div>
@@ -1703,10 +1703,10 @@
                     <!-- BOOK 1 - To add a cover image, replace the src with your image URL or path -->
                     <div class="current-book">
                         <div class="current-book-cover">
-                            <img src="assets/covers/savage_detectives.jpg" alt="The Savage Detectives" style="width: 100%; height: 100%; object-fit: cover;">
+                            <img src="assets/covers/2666.jpg" alt="2666" style="width: 100%; height: 100%; object-fit: cover;">
                             <i class="fas fa-book" style="font-size: 3rem; opacity: 0.3;"></i>
                         </div>
-                        <h4>The Savage Detectives</h4>
+                        <h4>2666</h4>
                         <p>Roberto Bolaño</p>
                     </div>
 
